getRequirements returns an empty set